--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<meta charse t="UTF-8">
+	<meta charset="UTF-8">
 	<title>Филин</title>
-	<link rel="stylesheet" hre f="style.css" type="text/css"
-	<link hre f="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
+	<link rel="stylesheet" hre f="style.css" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
 </head>
 <body>
 	<div class="wrap">
 		<h2>Филин</h2>
 		<img class="main-img" src="http://www.gettyimages.fr/gi-resources/images/Homepage/Hero/FR/FR_GI_40_Hero_Prestige169983008.jpg" alt="owl image">
 		<p>
-			<str0ng>Филин (лат. Bubo bubo)</str0ng> — хищная птица из семейства совиных, один из наиболее крупных представителей отряда совообразных. Наиболее характерные черты включают в себя массивное «бочкообразное» телосложение, рыхлое оперение с преобладанием рыжеватых и охристых оттенков, ярко-оранжевые глаза и пучки удлинённых перьев над ними. Распространён в лесных и степных районах Евразии, где приспосабливается к самым разнообразным биотопам, где имеется достаточная кормовая база и труднодоступные места для гнездования. Не сторонится человека и иногда (чаще в Западной Европе) селится в городской черте. Оседлая птица.
+			<strong>Филин (лат. Bubo bubo)</strong> — хищная птица из семейства совиных, один из наиболее крупных представителей отряда совообразных. Наиболее характерные черты включают в себя массивное «бочкообразное» телосложение, рыхлое оперение с преобладанием рыжеватых и охристых оттенков, ярко-оранжевые глаза и пучки удлинённых перьев над ними. Распространён в лесных и степных районах Евразии, где приспосабливается к самым разнообразным биотопам, где имеется достаточная кормовая база и труднодоступные места для гнездования. Не сторонится человека и иногда (чаще в Западной Европе) селится в городской черте. Оседлая птица.
 		</p>
 		<p>
 			Охотится на зайцев, грызунов, ежей, ворон, водоплавающих и куриных птиц, а также множество других позвоночных. Ориентируется на массовую, легкодоступную добычу, при необходимости легко переключается с одного вида корма на другой. К гнездованию приступает один раз в год зимой или ранней весной, когда земля ещё покрыта снежным покровом. Яйца откладывает в небольшую ямку в грунте, в качестве укрытия часто используя низкие ветки ели, нагромождения из камней и поваленных стволов, расщелины и вымоины. Охотно занимает уступы на крутых склонах гор и речных долин.
@@ -21,9 +21,9 @@
 		<fiqcaption>Филин семейства совиных</fiqcaption>
 		</fiqure>
 		<p>Крупная хищная птица, размерами уступает беркуту, но немного крупнее белой совы. Ряд источников называют её самым крупным представителем совообразных птиц, однако это не совсем верно: рыбный филин в среднем несколько массивнее обыкновенного, а более изящная бородатая неясыть немного длиннее[5][6]. По данным российских источников, длина птицы составляет 60—75 см, размах крыльев 160—190 см, масса самцов 2,1—2,7 кг, масса самок 3,0—3,2 кг. Для сравнения, у занимающего аналогичную экологическую нишу в Северной Америке виргинского филина масса наиболее крупных подвидов не превышает 2 кг. В соответствии с правилом Бергмана, размеры тела особей в популяциях уменьшаются с севера на юг: например, масса птиц, обитающих в Африке и на Ближнем Востоке, примерно на 20 % меньше массы птиц, распространённых в Северной и Западной Европе.</p>
-		<d v class= ;footer">
+		<div class= "footer">
 			&copy; 2018 | Филин
-		</d>
+		</div>
 	</div>
 </body>
 </html>
