add final changes css file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Филин</title>
-	<link rel="stylesheet" hre f="style.css" type="text/css">
+	<link rel="stylesheet" href="style.css" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
 </head>
 <body>
@@ -16,12 +16,12 @@
 		<p>
 			Охотится на зайцев, грызунов, ежей, ворон, водоплавающих и куриных птиц, а также множество других позвоночных. Ориентируется на массовую, легкодоступную добычу, при необходимости легко переключается с одного вида корма на другой. К гнездованию приступает один раз в год зимой или ранней весной, когда земля ещё покрыта снежным покровом. Яйца откладывает в небольшую ямку в грунте, в качестве укрытия часто используя низкие ветки ели, нагромождения из камней и поваленных стволов, расщелины и вымоины. Охотно занимает уступы на крутых склонах гор и речных долин.
 		</p>
-		<fiqure class="owl">
+		<figure class="owl">
 		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Bubo_bubo_winter_1.jpg/265px-Bubo_bubo_winter_1.jpg" alt="owl">
-		<fiqcaption>Филин семейства совиных</fiqcaption>
-		</fiqure>
+		<figcaption>Филин семейства совиных</figcaption>
+		</figure>
 		<p>Крупная хищная птица, размерами уступает беркуту, но немного крупнее белой совы. Ряд источников называют её самым крупным представителем совообразных птиц, однако это не совсем верно: рыбный филин в среднем несколько массивнее обыкновенного, а более изящная бородатая неясыть немного длиннее[5][6]. По данным российских источников, длина птицы составляет 60—75 см, размах крыльев 160—190 см, масса самцов 2,1—2,7 кг, масса самок 3,0—3,2 кг. Для сравнения, у занимающего аналогичную экологическую нишу в Северной Америке виргинского филина масса наиболее крупных подвидов не превышает 2 кг. В соответствии с правилом Бергмана, размеры тела особей в популяциях уменьшаются с севера на юг: например, масса птиц, обитающих в Африке и на Ближнем Востоке, примерно на 20 % меньше массы птиц, распространённых в Северной и Западной Европе.</p>
-		<div class= "footer">
+		<div class="footer">
 			&copy; 2018 | Филин
 		</div>
 	</div>
